--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div class="footer">
     <div class="word">
 
-        <p>Made with <span id="hrt"><i class="far fa-heart"></i></span> | ꧁L i q u i d꧂ 2022</p>
+        <p>Made with <span id="hrt"><i class="far fa-heart"></i></span> | Vxrcel 2022</p>
     </div>
 </div>
 
